# deliphone

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a7dd0290b4b_add_email_for_receipts_to_users.py  537f2396e29a_initial_schema.py  7b3e3f7ac997_initial_v2.py  f2ae4905c200_add_encrypted_pdn_fields_and_kyc_.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/admin/: __init__.py  analytics.py  audit_log.py  audits.py  auth.py  dashboard.py  devices.py  finance.py  incidents.py  kyc.py  locations.py  logistics.py  mdm.py  partners.py  rentals.py  service.py  settings.py  subscriptions.py  support.py  users.py
backend/app/api/v1/auth/: __init__.py  sms_auth.py
backend/app/api/v1/client/: __init__.py  auth.py  email.py  incidents.py  kyc.py  locations.py  me.py  payments.py  rentals.py  subscription.py  support.py
backend/app/api/v1/partner/: __init__.py  auth.py  clients.py  dashboard.py  finance.py  inventory.py  issues.py  registrations.py  returns.py  support.py
backend/app/api/v1/public/: __init__.py  devices.py
backend/app/api/v1/webhooks/: __init__.py  yookassa.py
backend/app/cli/: seed.py  seed_demo.py
backend/app/core/: config.py  crypto.py  db.py  deps.py  encryption.py  logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  admin.py  base.py  catalog.py  enums.py  finance.py  ops.py  partners.py  rentals.py  users.py  webhooks.py
backend/app/schemas/: __init__.py  admin.py  auth.py  kyc.py  partner.py  payments.py  rentals.py
backend/app/services/: __init__.py  android_mdm.py  documents.py  mdm_policies.py  notifications.py  receipts.py  refunds.py  registration_sessions.py  sms.py  storage.py  telegram_auth.py  telegram_bot.py  yookassa.py
backend/app/workers/: celery_app.py  incident_tasks.py  kyc_tasks.py  mdm_tasks.py  payment_tasks.py
backend/tests/: conftest.py  test_auth.py  test_e2e.py  test_healthz.py  test_kyc.py  test_payments.py
docs/: SPEC.md  app.jsx  (+12 more)
(+122 files in other folders)
